# devto-brightdata-scraping-sentiment

./: .gitignore  README.md  pyproject.toml
notebooks/: eda-llm-extraction.ipynb  eda-stock-data.ipynb  eval.ipynb  merge.ipynb
scripts/: scrape_api.py
scripts/magic/: brightdata.py
web/: app.py  extras.py  news.py  requirements.txt  signal.py
