[project]
name = "devto-brightdata-scraping-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.5.43",
    "html2text>=2024.2.26",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.1",
    "plotly>=5.24.1",
    "ruff>=0.8.4",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
    "yfinance>=0.2.51",
]
